// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`address должен отрендерить адрес, если showAddress=true 1`] = `
<span
  className="AmpMetroListPlace AmpMetroListPlace_ellipsis"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="AmpMetroListPlace__address AmpMetroListPlace_space"
  >
    Льва Толстого 16
  </span>
</span>
`;

exports[`address не должен отрендерить адрес, если showAddress=false 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`должен добавить класс AmpMetroListPlace_ellipsis, если ellipsis=true 1`] = `
<span
  className="AmpMetroListPlace AmpMetroListPlace_ellipsis"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`должен отрендерить детей 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="AmpMetroListPlace__content AmpMetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`должен отрендерить название города 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=false должен отрендерить метро и название города 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroList AmpMetroListPlace__metro AmpMetroListPlace_space"
  >
    <span
      className="AmpMetroList__iconList"
    >
      <span
        className="AmpMetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="AmpMetroList__station"
    >
      <span
        className="AmpMetroList__stationContent"
      >
        <span
          className="AmpMetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=false должен отрендерить метро, название города и детей 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroList AmpMetroListPlace__metro AmpMetroListPlace_space"
  >
    <span
      className="AmpMetroList__iconList"
    >
      <span
        className="AmpMetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="AmpMetroList__station"
    >
      <span
        className="AmpMetroList__stationContent"
      >
        <span
          className="AmpMetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="AmpMetroListPlace__content AmpMetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить метро без города и детей, если оно есть 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroList AmpMetroListPlace__metro AmpMetroListPlace_space"
  >
    <span
      className="AmpMetroList__iconList"
    >
      <span
        className="AmpMetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="AmpMetroList__station"
    >
      <span
        className="AmpMetroList__stationContent"
      >
        <span
          className="AmpMetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
  <span
    className="AmpMetroListPlace__content AmpMetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить метро без города, если оно есть 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroList AmpMetroListPlace__metro AmpMetroListPlace_space"
  >
    <span
      className="AmpMetroList__iconList"
    >
      <span
        className="AmpMetroList__icon"
        style={
          Object {
            "backgroundColor": "#f00",
          }
        }
      />
    </span>
     
    <span
      className="AmpMetroList__station"
    >
      <span
        className="AmpMetroList__stationContent"
      >
        <span
          className="AmpMetroList__stationFirstName"
        >
          Парк 
        </span>
        Культуры
      </span>
    </span>
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить название города и детей, если нет метро 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
  <span
    className="AmpMetroListPlace__content AmpMetroListPlace_space"
  >
    6 минут назад
  </span>
</span>
`;

exports[`метро showMetroOrRegionName=true должен отрендерить название города, если нет метро 1`] = `
<span
  className="AmpMetroListPlace"
>
  <span
    className="AmpMetroListPlace__regionName AmpMetroListPlace_space"
  >
    Москва
  </span>
</span>
`;
